Fixed bugs on Example and re-aranged folders

--- a/example.ipynb
+++ b/example.ipynb
@@ -24,24 +24,23 @@
     "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
     "from statsmodels.tsa.stattools import adfuller\n",
     "\n",
-    "sys.path.append(os.getcwd() + '/..')\n",
-    "from _aux.dateFunctions import EoMonth, eDate\n",
-    "from _data.database import database"
+    "from _data.database import database\n",
+    "from _aux.dateFunctions import EoMonth, eDate\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "0788a218-fb36-4bc6-8443-cd919dfa1b6c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sec = json.load(open('../_data/data_specs.json'))"
+    "sec = json.load(open('_data/data_specs.json'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "621f6c05-fc11-46f8-ba92-04ddcfd9c3f4",
    "metadata": {},
    "outputs": [
@@ -213,7 +212,7 @@
        "frequency                                                      [m]  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "42e12ce4-ff15-44ab-9089-41fdc752d1f5",
    "metadata": {},
    "outputs": [],
@@ -234,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "9f1d612e-48ec-460d-a60f-1ddcdf8c9a68",
    "metadata": {},
    "outputs": [
