Updated data and structure. Added Folder reference for Endog variables (manual)

--- a/all_data.ipynb
+++ b/all_data.ipynb
@@ -14,7 +14,7 @@
     "from numpy import log\n",
     "from datetime import datetime as dt\n",
     "\n",
-    "from _data.database import database"
+    "from _data.database import Database"
    ]
   },
   {
