--- a/example.ipynb
+++ b/example.ipynb
@@ -252,6 +252,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "2984bfec-5d48-48ad-ac36-e87518c5dcee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_dt = date(1990, 1, 1)\n",
+    "end_dt = date(2023, 1, 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "9f1d612e-48ec-460d-a60f-1ddcdf8c9a68",
    "metadata": {},
@@ -265,7 +276,7 @@
     }
    ],
    "source": [
-    "db = md.Database(sel_sec, 'm').data"
+    "db = md.Database(sel_sec, start_dt, end_dt, 'M')"
    ]
   },
   {
@@ -363,7 +374,7 @@
     }
    ],
    "source": [
-    "m_db = database(sel_sec, 1).data.astype(float)"
+    "m_db = md.Database(sel_sec, start_dt, end_dt, 'M').data.astype(float)"
    ]
   },
   {
@@ -486,7 +497,7 @@
     }
    ],
    "source": [
-    "us_inflation_exp = database(sel_sec, 1).data.fillna(method = 'ffill')"
+    "us_inflation_exp = md.Database(sel_sec, start_dt, end_dt, 'M').data.fillna(method = 'ffill')"
    ]
   },
   {
@@ -581,7 +592,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m_db = database(sel_sec, 'm')"
+    "m_db = md.Database(sel_sec, start_dt, end_dt, 'M')"
    ]
   },
   {
@@ -724,7 +735,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
